Fixed a bug where side nav would not be visible on the main app due to some weird redirect logic

--- a/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.scss
+++ b/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.scss
@@ -1,3 +1,9 @@
 .hide-if-empty:empty {
     display: none;
 }
+
+::ng-deep .companion-bar {
+    h1, h2, h3, h4, h5, h6 {
+        margin-bottom: 0px;
+    }
+}
